// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`favoriteButton component test 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="place-card__bookmark-button place-card__bookmark-button--active button"
        type="button"
      >
        <svg
          class="place-card__bookmark-icon"
          height="19"
          width="18"
        >
          <use
            xlink:href="#icon-bookmark"
          />
        </svg>
        <span
          class="visually-hidden"
        >
          To bookmarks
        </span>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="place-card__bookmark-button place-card__bookmark-button--active button"
      type="button"
    >
      <svg
        class="place-card__bookmark-icon"
        height="19"
        width="18"
      >
        <use
          xlink:href="#icon-bookmark"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        To bookmarks
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`favoriteButton component test 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="place-card__bookmark-button place-card__bookmark-button--active button"
        type="button"
      >
        <svg
          class="place-card__bookmark-icon"
          height="19"
          width="18"
        >
          <use
            xlink:href="#icon-bookmark"
          />
        </svg>
        <span
          class="visually-hidden"
        >
          To bookmarks
        </span>
      </button>
    </div>
    <div>
      <button
        class="property__bookmark-button--active property__bookmark-button button"
        type="button"
      >
        <svg
          class="property__bookmark-icon"
          height="30"
          width="31"
        >
          <use
            xlink:href="#icon-bookmark"
          />
        </svg>
        <span
          class="visually-hidden"
        >
          To bookmarks
        </span>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="property__bookmark-button--active property__bookmark-button button"
      type="button"
    >
      <svg
        class="property__bookmark-icon"
        height="30"
        width="31"
      >
        <use
          xlink:href="#icon-bookmark"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        To bookmarks
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
